--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ window.addEventListener( 'click', onPointerMove );
 			controls.enablePan =false;
 			controls.enableDamping = true;
 	*/
-			var sky_texture=new THREE.TextureLoader().load("../wallpapers/wallpaper.jpg")
+			var sky_texture=new THREE.TextureLoader().load("./wallpapers/wallpaper.jpg")
 			scene.background=sky_texture
 			const light = new THREE.HemisphereLight( 0xffffff, 0x000000, 2 );
 			scene.add(light);
