--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ window.addEventListener( 'click', onPointerMove );
 			var obj1;
 			var obj2;
 			var ad;
-			loader.load("../house/scene.gltf",function(gltf){
+			loader.load("./house/scene.gltf",function(gltf){
 				obj=gltf.scene
 				scene.add(gltf.scene)
 				
@@ -101,7 +101,7 @@ window.addEventListener( 'click', onPointerMove );
 			let mixer;
 			const stats = new Stats();
 			const clock = new THREE.Clock();
-			loader2.load("../astranaut/scene.gltf",function(gltf){
+			loader2.load("./astranaut/scene.gltf",function(gltf){
 				obj2=gltf.scene
 
 				obj2.position.set(6,2,28)
@@ -114,7 +114,7 @@ window.addEventListener( 'click', onPointerMove );
 			})
 			
 			loader1.setDRACOLoader(dracoLoader)
-			loader1.load("../non-texture/scene.gltf",function(gltf){
+			loader1.load("./non-texture/scene.gltf",function(gltf){
 				obj1=gltf.scene
 				obj1.position.set(0,-2,10)
 				scene.add(gltf.scene)
@@ -188,7 +188,7 @@ window.addEventListener( 'click', onPointerMove );
 		window.open("http://google.com")
 	}
 	if(intersects.length==0){
-				ad="../sound/welcome.ogg"
+				ad="./sound/welcome.ogg"
 				//audio_aud(ad)
 				with_out_loop_audio(ad)
 			}
@@ -196,7 +196,7 @@ window.addEventListener( 'click', onPointerMove );
 		
 
 			
-			ad="../sound/space.ogg"
+			ad="./sound/space.ogg"
 			audio_aud(ad)
 		</script>
 	</body>
