--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ window.addEventListener( 'click', onPointerMove );
 		function font_write(txt){
 		var geometry_font;
 		const font1=new FontLoader()
-		font1.load("../fonts/font1.json",function(font){
+		font1.load("./fonts/font1.json",function(font){
 		
 			geometry_font=new TextGeometry(txt,{
 				font:font,
